--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
    <div class="sidenav">
          <!--img src="People.jpeg"-->
          <ul class="Buttons">
-                <li><a href="#" onclick="myView(this); return false;">View</a></li>
-                <li><a href="#" onclick="myAdd(this); return false;">Add</a></li>
-                <li><a href="#" onclick="myVerify(this); return false;">Verify</a></li>
+                <li><a href="#" title="Use this for Viewing and may be Filter" onclick="myView(this); return false;" >View</a></li>
+                <li><a href="#" title="Use this for Add" onclick="myAdd(this); return false;">Add</a></li>
+                <li><a href="#" title="Use this for verification" onclick="myVerify(this); return false;">Verify</a></li>
                 <li><a href="#" onclick="myUpdate(this); return false;">Update</a></li>
                 <li><a href="#" onclick="myDelete(this); return false;">Delete</a></li>
          </ul>
