--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
  <br>
        <div id="inputgroup" class="inputgroup">
        <!--h5>Employee Info (view, add, modify, delete)</h5-->
-       <input type="text" name="searchName" id="thisname" placeholder="JaneDoe">
-       <input type="text" officeNum="officeNum" id="officeNum" placeholder="OfficeNumber">
-       <input type="text" phoneNum="phoneNum" id="phoneNum" placeholder="PhoneNumber">
+       <input type="text" name="searchName" id="thisname" placeholder="ThisName">
+       <input type="text" officeNum="officeNum" id="officeNum" placeholder="ThisOfficeNumber">
+       <input type="text" phoneNum="phoneNum" id="phoneNum" placeholder="ThisPhoneNumber">
        <button id='searchIt' onclick="FilterThem()">Search</button>
        </div>
  <br>
@@ -44,8 +44,8 @@
  <br>    
      <div id="inputgroup2" class="inputgroup2">
        <!--h5>Employee Info (update)</h5-->
-       <input type="text" name="oldName" id="oldName" placeholder="CurrentJaneDoe">
-       <input type="text" name="newName" id="newName" placeholder="NewJaneDoe">
+       <input type="text" name="oldName" id="oldName" placeholder="OldName">
+       <input type="text" name="newName" id="newName" placeholder="NewName">
        <input type="text" officeNum="newofficeNum" id="newofficeNum" placeholder="NewOfficeNumber">
        <input type="text" phoneNum="newphoneNum" id="newphoneNum" placeholder="NewPhoneNumber">
 
