--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body>
+<body onload="myView()">
  <script src="./assets/js/employeeList.js"></script>
  <nav>
    <div class="sidenav">
