now regex works as well for name search
for example one can search a|s for locating names with a or s, case insensitive

also name search is case insensitive now as names upper or lower will not matter, as they are names of individuals and not variable Lol.

--- a/index.html
+++ b/index.html
@@ -62,10 +62,20 @@
  
       </div>
      </div>
+     <div>
+      <div id="MyVerify" class="MyVerify">
+        <!--h5>Employee Info (update)</h5-->
+        <!--input type="text" name="oldName" id="oldName" placeholder="CurrentJaneDoe">
+        <input type="text" name="newName" id="newName" placeholder="NewJaneDoe">
+        <input type="text" officeNum="newofficeNum" id="newofficeNum" placeholder="NewOfficeNumber">
+        <input type="text" phoneNum="newphoneNum" id="newphoneNum" placeholder="NewPhoneNumber"-->
+        <button id='searchIt' onclick="FilterThem()">Search</button>
+      </div>
+     </div>
   
  <main>
 <!--section id= "Welcome">
- <h3>Welcome to the Employee Page</h3>
+ <h3>Welcome to the Our Employee Page</h3>
 </section-->
 
 
